kitten/reported_bugs/rust/rust-78720/stderr.txt
error[E0412]: cannot find type `F` in this scope

  --> mutant.rs:7:36

   |

7  |   struct Map2 < segment2 > { _func : F }

   |                                      ^

   |

help: a trait with a similar name exists

   |

7  | struct Map2 < segment2 > { _func : Fn }

   |                                    ^^

help: you might be missing a type parameter

   |

7  | struct Map2 < segment2, F > { _func : F }

   |                       ^^^



warning: type parameter `segment2` should have an upper camel case name

 --> mutant.rs:7:15

  |

7 | struct Map2 < segment2 > { _func : F }

  |               ^^^^^^^^ help: convert the identifier to upper camel case (notice the capitalization): `Segment2`

  |

  = note: `#[warn(non_camel_case_types)]` on by default



error: internal compiler error: /rustc/338f939a8d77061896cd0a1ca87a2c6d1f4ec359/compiler/rustc_middle/src/ty/sty.rs:399:33: upvar_tys called before capture types are inferred



thread 'rustc' panicked at 'Box<Any>', compiler/rustc_errors/src/lib.rs:958:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (338f939a8 2020-11-02) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=1 -C target-cpu=skylake --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `server`

#1 [mir_built] building MIR for `server`

end of query stack

error: aborting due to 2 previous errors; 1 warning emitted



For more information about this error, try `rustc --explain E0412`.

